Fix bug with overlay not covering whole screen
Game container height set to 100vh, which is not the whole screen when content needs to scroll.

Overlays expands to cover right 0 and bottom 0 when an overlay is shown. At the same time give overlay wrapper a width and height of 100% to fill the whole space of overlays class.

--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,8 @@ body {
     animation-name: fade-in;
     animation-duration: 1s;
     animation-timing-function: ease-out;
+    position: relative;
+    margin-top: 10px;
 }
 
 .game-board {
@@ -467,12 +469,17 @@ body {
     left: 0;
 }
 
+.overlays:has(.overlay-wrapper.shown) {
+    right: 0;
+    bottom: 0;
+}
+
 .overlay-wrapper {
     display: none;
     justify-content: center;
     align-items: center;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
 }
 
 .overlay-background {
@@ -591,13 +598,13 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    width: 100vw;
-    height: 100vh;
     margin: 0;
 }
 
-.game-container {
-    margin-top: 10px;
+.menu-container,
+.loading-screen {
+    width: 100vw;
+    height: 100vh;
 }
 
 .no-transition {
